feat: 🎸 Initial reference sheet for mansions

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "mael.xyz",
+  "name": "mom.mael.xyz",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT",
+  "license": "UNLICENSED",
   "scripts": {
     "dev": "next dev",
     "start": "next start -- -p ${PORT:-3000}",
@@ -13,9 +13,9 @@
     "test": "echo 'Todo'"
   },
   "engines": {
-    "npm": "6.11.3",
-    "node": "10.17.0",
-    "yarn": "1.19.1"
+    "npm": "^6.11.3",
+    "node": "^10.17.0",
+    "yarn": "^1.19.1"
   },
   "husky": {
     "hooks": {
@@ -23,11 +23,11 @@
     }
   },
   "dependencies": {
-    "grommet": "^2.8.0",
     "next": "^9.1.2",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
-    "styled-components": "^4.4.1"
+    "react-pdf": "^4.1.0",
+    "react-spinners": "^0.6.1"
   },
   "devDependencies": {
     "@types/node": "^12.12.6",
